group 'com.arhohuttunen'
version '1.0-SNAPSHOT'

apply plugin: 'java'

sourceCompatibility = 1.8

test {
    useJUnitPlatform()
    testLogging {
        events 'PASSED', 'FAILED', 'SKIPPED'
    }
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation group: 'org.eclipse.jetty', name: 'jetty-server', version: '11.0.2'
    implementation group: 'org.eclipse.jetty', name: 'jetty-servlet', version: '11.0.2'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.7.1'
}
